--- a/index.html
+++ b/index.html
@@ -380,5 +380,6 @@
 </div>
 <script src="js/impress.js"></script>
 <script>impress().init();</script>
+<script src="http://10.2.82.41:8082/target/target-script-min.js#anonymous"></script>
 </body>
 </html>
